--- a/server-chat/package.json
+++ b/server-chat/package.json
@@ -6,10 +6,13 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "drizzle-orm": "^0.44.5",
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "drizzle-kit": "^0.31.4",
+    "pg": "^8.16.3"
   },
   "module": "src/index.js"
 }
