--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "drizzle-orm": "^0.44.5",
-    "elysia": "latest"
+    "elysia": "1.3.21"
   },
   "devDependencies": {
     "bun-types": "latest",
