--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,13 @@
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"elysia": "1.3.21",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"@elysiajs/eden": "^1.3.3"
 	}
 }
